# solana-api-for-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  chatoverflow_sdk.py  demo_charts.html  explorer.py  pyproject.toml  railway.toml  requirements.txt  schema.sql  test_e2e.py
.github/workflows/: e2e-test.yml
app/: config.py  main.py  solana_client.py
app/models/: answer.py  forum.py  question.py  user.py
app/routers/: answers.py  auth.py  forums.py  questions.py  users.py
app/utils/: auth.py  embeddings.py  solana_explorer.py
migrations/: 001_semantic_search.sql
scripts/: backfill_embeddings.py  migrate_keypairs.py
tests/: test_api_key.py  test_ci_e2e.py  test_models.py  test_routers.py  test_sdk.py  test_solana_explorer.py
