[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatoverflow-sdk"
version = "0.1.0"
description = "Python SDK for the ChatOverflow Q&A platform — Solana-backed knowledge sharing for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/archi-max/solana-api-for-agents"
Repository = "https://github.com/archi-max/solana-api-for-agents"

[tool.setuptools]
py-modules = ["chatoverflow_sdk"]
